--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,14 +16,17 @@ composeBom = "2024.09.00"
 lifecycleRuntimeKtxVersion = "2.7.0"
 lifecycleViewmodelCompose = "2.9.0"
 lifecycleViewmodelComposeVersion = "2.7.0"
+accompanistPager = "0.33.2-alpha"
+accompanistPagerIndicators = "0.33.2-alpha"
 material3 = "1.3.2"
 mockitoCore = "4.11.0"
 mockitoInline = "5.2.0"
 mpandroidchart = "v3.1.0"
 room = "2.7.1"
-ksp = "2.1.20-2.0.1" # need to check the latest version in official website
+ksp = "2.1.20-2.0.1"
 roomTesting = "2.7.1"
 junitKtx = "1.2.1"
+threetenabp = "1.4.5"
 turbine = "0.12.1"
 
 
@@ -62,6 +65,7 @@ room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
+threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 
