--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ composeBom = "2024.09.00"
 lifecycleRuntimeKtxVersion = "2.7.0"
 lifecycleViewmodelCompose = "2.9.0"
 lifecycleViewmodelComposeVersion = "2.7.0"
+lucideCompose = "0.2.0"
 material3 = "1.3.2"
 mockitoCore = "4.11.0"
 mockitoInline = "5.2.0"
@@ -57,6 +58,7 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 kotlinx-coroutines-test-v171 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTestVersion" }
+lucide-compose = { module = "io.github.lucide:lucide-compose", version.ref = "lucideCompose" }
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
 mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockitoInline" }
