--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.9.2"
 chartsVersion = "0.2.4-alpha"
+converterGson = "2.9.0"
 core = "1.6.1"
 coreTesting = "2.2.0"
 datastorePreferences = "1.1.7"
@@ -22,6 +23,7 @@ material3 = "1.3.2"
 mockitoCore = "4.11.0"
 mockitoInline = "5.2.0"
 mpandroidchart = "v3.1.0"
+retrofit = "2.9.0"
 room = "2.7.1"
 ksp = "2.1.20-2.0.1" # need to check the latest version in official website
 roomTesting = "2.7.1"
@@ -43,6 +45,7 @@ androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelCompose" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 androidx-room-testing = { module = "androidx.room:room-testing", version.ref = "roomTesting" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -63,6 +66,7 @@ material3 = { module = "androidx.compose.material3:material3", version.ref = "ma
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
 mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockitoInline" }
 mpandroidchart = { module = "com.github.PhilJay:MPAndroidChart", version.ref = "mpandroidchart" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
